--- a/digitalclock.css
+++ b/digitalclock.css
@@ -74,6 +74,7 @@ dialog::backdrop {
   font-size: 30px;
   border-radius: 4px;
   cursor: pointer;
+  text-decoration:none;
 }
 
 /* digitalclock */
